<resources>
    <string name="app_name">Salmon</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="events">Events</string>
    <string name="payments">Payments</string>
    <string name="messages">Messages</string>
    <string name="contacts">Contacts</string>
    <string name="pending">Pending</string>
    <string name="requested">Requested</string>
    <string name="dashboard">Dashboard</string>
    <string name="title_activity_drawer_dashboard">Dashboard</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="year_received">Received: </string>
    <string name="year_sent">Sent: </string>
    <string name="month_received">Received: </string>
    <string name="month_sent">Sent: </string>
    <string name="payment_summary">Payment Summary</string>
    <string name="connections">Connections</string>
    <string name="people_invited">%d people invited</string>
    <string name="new_connection_dialog_title">Add new connection.</string>
    <string name="invalid_connection_error">You must enter a valid username</string>
    <string name="new_message_dialog_title">Send new message</string>
    <string name="new_payment_dialog_title">Send new payment</string>
    <string name="new_event_dialog_title">Add new event</string>
    <string name="about_message">Created by Sam Grund (sgrund@oberlin.edu) and\nSimon Ever-Hale (severhal@oberlin.edu)</string>
    <string name="user_created_message">User created</string>
    <string name="enter_user_email_hint">Enter user email</string>
    <string name="event_name_hint">Event name</string>
    <string name="participants_event">Participants:</string>
    <string name="message_subject_hint">Subject</string>
    <string name="message_body_hint">Body</string>
    <string name="payment_name_hint">Name</string>
    <string name="payment_amount_hint">$</string>
    <string name="last_month_summary">In the last month</string>
    <string name="last_year_summary">In the last year</string>
    <string name="user_not_found">User not found</string>
</resources>
