<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp"
    android:gravity="center">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_rectangle"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/last_month_summary"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@android:drawable/divider_horizontal_textfield"
            android:layout_marginBottom="10dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/month_sent"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvMonthSent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="$23.53"
                android:textColor="@color/colorRed"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/month_received"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvMonthReceived"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="$23.53"
                android:textColor="@color/colorGreen"
                android:textSize="20sp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_rectangle"
        android:padding="10dp"
        android:orientation="vertical">

        <TextView
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/last_year_summary"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@android:drawable/divider_horizontal_textfield"
            android:layout_marginBottom="10dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/year_sent"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvYearSent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="$23.53"
                android:textColor="@color/colorRed"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/year_received"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvYearReceived"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="$23.53"
                android:textColor="@color/colorGreen"
                android:textSize="20sp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>